# SClicker

./: .pre-commit-config.yaml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  post_create.sh  requirements.txt
sclick/: enums.py  main.py
sclick/controllers/: app_controller.py
sclick/models/: app_model.py
sclick/views/: app.py  create_page.py  entry_page.py  load_page.py
